--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 
   .modalbox {
     position: relative;
-    max-width: 70%;
+    max-width: 95%;
     background: #fff;
     margin: 0 auto;
     border-radius: 0.3125rem;
@@ -227,6 +227,24 @@
 
   .inp-phone {
     width: 100%;
+  }
+}
+
+@media (min-width: 500px) {
+  .modalbox {
+    max-width: 500px;
+  }
+
+  .inp-name {
+    width: calc(100% - 145px);
+  }
+
+  .inp-email {
+    width: calc(100% - 170px);
+  }
+
+  .inp-phone {
+    width: calc(100% - 100px);
   }
 }
 
